// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button должна отображаться икнока 1`] = `
<button
  className="Button"
  onClick={[Function]}
>
  <div
    className="Button__row"
  >
    <div
      className="Button__col"
    >
      <Icon />
    </div>
    <div
      className="Button__col"
    >
      button
    </div>
  </div>
</button>
`;

exports[`Button должна отображаться подсказка для горячих клавиш 1`] = `
<button
  className="Button"
  onClick={[Function]}
>
  <div
    className="Button__row"
  >
    <div
      className="Button__col"
    >
      button
    </div>
    <div
      className="Button__col"
    >
      <Hotkey
        hotkey="alt+q"
      />
    </div>
  </div>
</button>
`;

exports[`Button обычный рендер 1`] = `
<button
  className="Button"
  onClick={[Function]}
>
  <div
    className="Button__row"
  >
    <div
      className="Button__col"
    >
      button
    </div>
  </div>
</button>
`;
